changed img source

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="https://avatars.githubusercontent.com/u/104148492?s=400&u=13be54cf7a493245ee79fb857a763aa00c6cac70&v=4" alt="Git hub profile picture">
-                    <!--<img src="profile_pic.png" alt="Git hub profile picture">for locally stored image-->
+                    <!--<img src="https://avatars.githubusercontent.com/u/104148492?s=400&u=13be54cf7a493245ee79fb857a763aa00c6cac70&v=4" alt="Git hub profile picture">found on internet-->
+                    <img src="profile_pic.png" alt="Git hub profile picture"><!--for locally stored image-->
                 </td>
                 <td>
                     <h1>Kedar Shidhaye</h1>
