removed some unnecessary<br> statements

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
         
         
         <input type="submit">
-        <h2>Instructions</h2><br>
-        <p>1. For mac users there wont be a problem since there is a default mai app </p><br>
+        <h2>Instructions</h2>
+        <p>1. For mac users there wont be a problem since there is a default mai app </p>
         <p>2. After pressing submit button if you dont get a mail window opened then you <br>
               havent set a default "mail to" connection.</p>
         <p>3. In your chrome browser go to 
