--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
         
         <input type="submit">
         <h2>Instructions</h2>
-        <p>1. For mac users there wont be a problem since there is a default mai app </p>
+        <p>1. For mac users there wont be a problem since there is a default main app </p>
         <p>2. After pressing submit button if you dont get a mail window opened then you <br>
               havent set a default "mail to" connection.</p>
         <p>3. In your chrome browser go to 
-            <br>settings->Privacy and security->Site settings->additional permissiosn->protocol handlers and then select<br>
-            "Site can ask to handle protocol" </p>
+              <br>settings->Privacy and security->Site settings->additional permissiosn->protocol handlers and then select<br>
+              "Site can ask to handle protocol" </p>
         <p>4. Then open your gmail and in the url bar there will be same symbol as protocol handlers 
               click on it then in drop down click on allow</p>
         <p>5. Then open windows settings->permissions->set default as-> chrome-> mailto </p>
