--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <li>Email id:-kedarshidhaye2003@gmail.com</li>
         <li>Linked in:- <a href="https://www.linkedin.com/in/kedar-shidhaye-334863246/">Linkedin</a></li>
     </ul>
-    <form class="" action="mailto:kedar.shidhaye@soamiya.edu" method="post" enctype="text/plain">
+    <form class="" action="mailto:kedar.shidhaye@somaiya.edu" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName" value=""><br><br>
         <label>Your Email:</label>
